[package]
name = "metabolic-ledger"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Bio-inspired simulation ledger: ATP cellular energy metaphors, adaptive Kelly energy commitment, and metabolic cost tracking for multi-asset SNN portfolios."
repository = "https://github.com/Limen-Neural/metabolic-ledger"
keywords = ["trading", "snn", "neuromorphic", "backtesting", "portfolio"]
categories = ["science", "algorithms", "simulation"]
exclude = ["docs/"]

[lib]
name = "metabolic_ledger"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
